Agregue la visualización de las imagenes en cartas y conecte la API de rick and morty

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,1 +1,8 @@
-<h1>{{people}}</h1>
+<div class="card" style="width: 18rem;">
+    <img src="{{product.img}}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h1 class="card-text">{{product.name}}</h1>
+      <p class="card-text">{{product.description}}</p>
+    </div>
+  </div>
+
