--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-    <img src="{{product.img}}" class="card-img-top" alt="...">
+    <img src="{{product.image}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h1 class="card-text">{{product.name}}</h1>
       <p class="card-text">{{product.description}}</p>
