--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,7 +2,11 @@
     <img src="{{product.image}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h1 class="card-text">{{product.name}}</h1>
-      <p class="card-text">{{product.description}}</p>
+      <p class="card-text">{{product.status}}</p>
+      <p class="card-text">{{product.species}}</p>
+      <p class="card-text">{{product.gender}}</p>
+      <button type="button" class="btn btn-danger">Delete</button>
+      <button type="button" class="btn btn-info">Edit</button>
     </div>
   </div>
 
