--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,12 +1,13 @@
-<div class="card" style="width: 18rem;">
-    <img src="{{product.image}}" class="card-img-top" alt="...">
-    <div class="card-body">
+<div class="card mx-auto" style="width: 18rem;">
+  <img src="{{product.image}}" class="card-img-top" alt="...">
+  <div class="card-body">
       <h1 class="card-text">{{product.name}}</h1>
       <p class="card-text">{{product.status}}</p>
       <p class="card-text">{{product.species}}</p>
       <p class="card-text">{{product.gender}}</p>
       <button type="button" class="btn btn-danger">Delete</button>
       <button type="button" class="btn btn-info">Edit</button>
-    </div>
   </div>
+</div>
+
 
