Realice cambios hechos en clase "FormControl"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,14 @@
 <body>
 
     <h1 class="text-center">Personajes de Rick and Morty</h1>
+    <label for="name">Name:</label>
+    <input class="border-green" type="text" id="name" [formControl]="name">
+
+    <label for="image">Image:</label>
+    <input class="border-green" type="text" id="image" [formControl]="image">
+
+    <label for="status">Status:</label>
+    <input class="border-green" type="text" id="status" [formControl]="status">
 
 
     <div class="d-flex justify-content-center flex-column">
