--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,12 +1,10 @@
 <div class="card mx-auto" style="width: 18rem;">
-  <img src="{{product.image}}" class="card-img-top" alt="...">
+  <img src="{{product.images}}" class="card-img-top" alt="...">
   <div class="card-body">
-      <h1 class="card-text">{{product.name}}</h1>
-      <p class="card-text">{{product.status}}</p>
-      <p class="card-text">{{product.species}}</p>
-      <p class="card-text">{{product.gender}}</p>
+      <h1 class="card-text">{{product.title}}</h1>
+      <p class="card-text">{{product.price}}</p>
+      <p class="card-text">{{product.description}}</p>
       <button type="button" class="btn btn-danger" (click)="delete(product.id)">Delete</button>
-      <button type="button" class="btn btn-info" (click)="edit(product.image, product.name, product.name, product.species,product.gender)">Edit</button>
   </div>
 </div>
 
