--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,36 +11,32 @@
 <body>
 
     <h1 class="text-center">Productos Platzi</h1>
-    <label for="name">Titulo:</label>
-    <input class="border-green" type="text" id="title" [formControl]="title">
+     
+                <label for="name">Titulo:</label>
+                <input class="border-green" type="text" id="title" [formControl]="title">
 
-    <label for="image">Precio:</label>
-    <input class="border-green" type="text" id="price" [formControl]="price">
+                <label for="image">Precio:</label>
+                <input class="border-green" type="text" id="price" [formControl]="price">
 
-    <label for="status">Descripcion:</label>
-    <input class="border-green" type="text" id="description" [formControl]="description">
+                <label for="status">Descripcion:</label>
+                <input class="border-green" type="text" id="description" [formControl]="description">
 
-    <label for="image">Categoria:</label>
-    <input class="border-green" type="text" id="CategoryId" [formControl]="CategoryId">
-    
-    <label for="image">Image:</label>
-    <input class="border-green" type="text" id="images" [formControl]="images">
+                <label for="image">Image:</label>
+                <input class="border-green" type="text" id="images" [formControl]="images">
 
-    <button (click)="OnSummit()">
-        Enviar Producto
-    </button>
-    <div class="d-flex justify-content-center flex-column">
-        <app-card *ngFor="let person of products" [product]="person"></app-card>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+
+
+                <button (click)="OnSummit()">
+                    Enviar Producto
+                </button>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let person of products">
+                            <app-card [product]="person" (deleteProduct)="onDeleteProduct($event)"></app-card>
+                        </div>
+                    </div>
+                </div>
+                
 </body>
 
 </html>
